2001-08-31  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* and-let-star-compat.scm:  Deleted.

	* Makefile.am: Remove references to and-let-star-compat.scm.

2001-08-30  Thien-Thi Nguyen  <ttn@revel.glug.org>

	* boot-9.scm (resolve-interface): When returning a custom
	interface, also consult source module's entire binding set,
	not just its exported bindings, before throwing error.

2001-08-25  Marius Vollmer  <mvo@zagadka.ping.de>

	* boot-9.scm (resolve-interface): Get variables from the public
	interface of a module instead of from the module itselfs.

2001-08-25  Marius Vollmer  <mvo@zagadka.ping.de>

	* Makefile.am (AUTOMAKE_OPTIONS): Change "foreign" to "gnu".

2001-08-12  Thien-Thi Nguyen  <ttn@revel.glug.org>

	* getopt-long.scm: Rewrite.
	Touch up docstrings.
	Augment commentary.

2001-08-02  Neil Jerram  <neil@ossau.uklinux.net>

	* debugger.scm (run-last-command): Return current state if
	last-command fluid is not yet set.

2001-08-02  Thien-Thi Nguyen  <ttn@revel.glug.org>

	* getopt-long.scm: Refill to fit in 80 columns.

	(process-long-option): Fix bug: Keep track of `optional'
	value-required info and use this to determine whether or not the
	next element is to be taken as the option arg.

2001-07-31  Keisuke Nishida  <knishida@nurs.or.jp>

	* boot-9.scm (process-define-module): Fixed a bug that did not
	handle :use-syntax correctly.

2001-07-24  Marius Vollmer  <mvo@zagadka.ping.de>

	* syncase.scm (psyncomp): Removed, it is now in
	compile-psyntax.scm.

2001-07-23  Marius Vollmer  <mvo@zagadka.ping.de>

	* Makefile.am (psyntax.pp): Enable rule for psyntax.pp only in
	maintainer mode.  Use compile-psyntax.scm for actual compilation.
	Make sure the uninstalled guile is used.
	(EXTRA_DIST): Distribute compile-psyntax.scm
	* compile-psyntax.scm: New file.

2001-07-18  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* and-let-star.scm, debug.scm, debugger.scm, history.scm,
	lineio.scm, null.scm, optargs.scm, r4rs.scm, r5rs.scm,